Fri Nov 26 20:52:03 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstscrollgraph.[hc]: request and draw probed sample data.

	* beast-gtk/bstsnetrouter.c: setup source and ochannel on scrollgraphs.

Fri Nov 26 19:14:00 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstscrollgraph.[hc]: paint testpattern.

Fri Nov 26 16:45:32 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstscrollgraph.[hc]: new NO-WINDOW widget skeleton for
	display purposes.

	* beast-gtk/dialogs/radgets-beast.xml: define "scrollgraph" radget
	type and "scrollgraph-dialog" to monitor output signals.

	* beast-gtk/bstutils.c: define BstScrollgraph as radget type.

	* beast-gtk/bstsnetrouter.c: popup scrollgraph-dialog to monitor
	output signals.

	* beast-gtk/gxk/gxkradget.c: warning cosmetics.

Fri Nov 26 16:17:05 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstknob.[hc]: cleanups.

Sat Nov 20 12:43:15 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstmenus.c: use gxk_menu_attach_as_submenu() for proper 
	submenu handling. allow creation of empty menus.

	* beast-gtk/bstmenus.h: allow icons for submenu items.

	* beast-gtk/bstsnetrouter.c: implemented output signal submenu.

	* beast-gtk/icons/signal.png:
	* beast-gtk/icons/signal.xcf: new icons.

Sat Nov 20 06:54:22 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstsnifferscope.c:
	bse_source_queue_probe_request(): prioritize scope updates lower than
	gtk's redraw priority, to 1) allow timely updates, 2) prevent scope
	updates running behind playposition under heavy load scenarios.

Fri Nov 19 00:47:50 2004  Tim Janik  <timj@gtk.org>

	* docs/site-news.texi: announce release.

	* docs/site-oldnews.texi: rotation.

Thu Nov 18 18:07:21 2004  Tim Janik  <timj@gtk.org>

	* docs/site-about.texi: update on new features.

Thu Nov 18 14:05:26 2004  Tim Janik  <timj@gtk.org>

	* configure.in: released beast 0.6.3, binary 0, interface 0.

Wed Nov 17 01:20:56 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstbuseditor.c:
	* beast-gtk/bstsnifferscope.c: