@@ -1,3 +1,10 @@
+Sat Nov 27 18:37:46 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstscrollgraph.[hc]: request and display FFT data.
+
+	* beast-gtk/bstsnifferscope.[hc]: support specification of block-sizes
+	for sample and fft data requests in bse_source_queue_probe_request().
+
 Fri Nov 26 20:52:03 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstscrollgraph.[hc]: request and draw probed sample data.
